Fix contrast to improve the legibility of your content

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #fff;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -107,7 +107,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #333;
   align-items: center;
 }
 .filter-options h2 {
@@ -127,6 +127,9 @@ nav h1 a {
   margin: 10px;
   padding: 0 10px;
   width: calc(50% - 40px);
+}
+.filter-options label {
+  display: none;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -160,10 +163,10 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #333;
   font-family: Arial,sans-serif;
   font-size: 14pt;
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
@@ -174,7 +177,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #333;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
